@@ -1,3 +1,5 @@
+* BUG#9007 Suppression des données de prestations sur la vue garantie des contrats non groupe
+
 Version 2.0 - 2018-04-13
 * BUG#8331 Correction du crash sur la sauvegarde du paramétrage de prestation
 * OTH#0000 Correction suite au commit 5d5a04299c: Manque le paramètre kwargs dans les méthodes de calcul
